# NMEA2000Instruments

./: .gitignore  CMakeLists.txt  PGN_DECODER_README.md  convert_pgn_xml_to_json.py  deploy_firmware.sh  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/gpio/: CMakeLists.txt
components/i2c/: CMakeLists.txt  i2c.c
components/io_extension/: CMakeLists.txt  io_extension.c  io_extension.h
components/lvgl_port/: lvgl_port.h
components/pgn_parser/: CMakeLists.txt  pgn_example.c  pgn_json_parser.c  pgn_json_parser.h
components/rgb_lcd_port/: rgb_lcd_port.c
components/sd/: CMakeLists.txt  sd.c  sd.h
components/touch/: gt911.c
components/twai/: twai.c
components/usart/: CMakeLists.txt
data/PGNS/: NMEA_database_1_300.json
main/: CMakeLists.txt  idf_component.yml  lvgl  main.c  project.info  ui  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
main/components/: ui_comp.c  ui_comp.h  ui_comp_databox.c  ui_comp_databox.h  ui_comp_hook.c  ui_comp_hook.h
main/fonts/: ui_font_CodePro60.c  ui_font_CodePro70.c
main/images/: ui_img_compassglow_png.c
main/screens/: ui_Wind.c  ui_Wind.h
main/user/can/: can.c  can.h  can_debug_ui.c  can_debug_ui.h
main/user/events/: ui_events.c
main/user/ota/: ota.c  ota.h
main/user/pwm/: pwm.c
main/user/sd_card/: sd_card.c
main/user/settings/: settings.c  settings.h
main/user/ui/: ui_datapicker_ext.c  ui_datapicker_ext.h
main/user/wifi/: wifi.c  wifi.h
